Object Data Structure 1.0.2  - ODS is now based on Java 8 instead of Java 10.